# Peek

./: .gitignore  CMakeLists.txt  DEVELOPMENT.md  LICENSE  README.md  app.rc  build-config.json  gui.c  gui.h  logger.c  logger.h  main.c  network.c  network.h  package.json  resource.h
.github/workflows/: release.yml
daemon/: CMakeLists.txt
daemon/src/: auto-update.c  auto-update.h  config.c  config.h  ipc.c  ipc.h  logger.c  logger.h  main.c  network.c  network.h  resource.rc  service.c  service.h
frontend/: .gitignore  README.md  next.config.js  package.json  tailwind.config.js  tsconfig.json
frontend/src/pages/: index.tsx
frontend/src/styles/: globals.css
installer/: Peek.nsi
scripts/: build.js  package.js  sign-binaries.js
shared/: ipc-protocol.h  types.h
ui/: CMakeLists.txt
ui/src/: ipc-client.cpp  ipc-client.h  main.cpp  manifest.xml  resource.rc  webview.cpp  webview.h  window.cpp  window.h
updater/: CMakeLists.txt
updater/src/: downloader.c  downloader.h  installer.c  installer.h  logger.c  logger.h  main.c  resource.rc  verifier.c  verifier.h
